--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -186,7 +186,7 @@ jobs:
       - name: run dylint clippy on workspace crates
         env:
           # set the dylint driver path to the target/ directory so that it's hopefully cached by rust-cache
-          DYLINT_DRIVER_PATH: ${{ github.workspace }}/target/dylint_drivers
+          DYLINT_DRIVER_PATH: ${{ github.workspace }}/target/dylint_drivers/
           DYLINT_RUSTFLAGS: "-D warnings"
         run: cargo dylint --all --workspace
 
