ensure dylint driver path exists

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -188,7 +188,9 @@ jobs:
           # set the dylint driver path to the target/ directory so that it's hopefully cached by rust-cache
           DYLINT_DRIVER_PATH: ${{ github.workspace }}/target/dylint_drivers/
           DYLINT_RUSTFLAGS: "-D warnings"
-        run: cargo dylint --all --workspace
+        run: |
+          mkdir -p "$DYLINT_DRIVER_PATH"
+          cargo dylint --all --workspace
 
   test:
     if: ${{ always() && !cancelled() }}
