--- a/crates/astria-composer/local.env.example
+++ b/crates/astria-composer/local.env.example
@@ -20,5 +20,7 @@ ASTRIA_COMPOSER_PRIVATE_KEY="2bd806c97f0e00af1a1fc3328fa763a9269723c8db8fac4f93a
 ASTRIA_COMPOSER_BLOCK_TIME=2000
 
 # Max bytes to encode into a single sequencer `SignedTransaction`, not including signature,
-# public key, nonce. This is the sum of the sizes of all the `SequenceAction`s
-ASTRIA_COMPOSER_MAX_BUNDLE_SIZE=250000
+# public key, nonce. This is the sum of the sizes of all the `SequenceAction`s. Should be
+# set below the sequencer's max block size to allow space for encoding, signature, public
+# key and nonce bytes
+ASTRIA_COMPOSER_MAX_BUNDLE_BYTES=200000
