feat(ci): lint debug fields in tracing events (#664)
## Summary
Add a custom lint using the
[`dylint`](https://github.com/trailofbits/dylint) tool to detect and
warn about debug-formatted fields in tracing events.

## Background
Debug-formatted fields in tracing events are bad practice. They are hard
to read and parse, and they surface language-specific implementation
details that have no place in observability.

The present lint only acts on debug-formatted fields in
`tracing::event!` macros (which includes macros like `info!` and `warn!`
that are implemented in terms of it). Debug-formatted fields in
`#[instrument]` proc macros will be detected in a separate lint.

## Changes
- Implement a custom lint using dylint that flags that debug-formatted
fields in `tracing::event!` macros
- Adds tests for the lint
- Add a github job to run dylints (the lint failing does currently not
fail CI)
- Add a `default-members` field to the virtual workspace so that the
lints are exempt from most CI jobs (the lints require a nightly rust)

## Testing
This patch provides `compiletest-rs` macros that correctly detects
debug-formatted fields in event macros and not in
instrument-proc-macros.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,7 +61,10 @@ jobs:
           version: "24.4"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Check that each crate compiles individually (circumventing workspace wide dependency resolution)
-        run: cargo hack check --all --all-features
+        run: |
+          : # exclude all lints because cargo-hack ignores default-members and operates on all workspace members
+          cargo hack check --workspace --all-features \
+          --exclude tracing_debug_field
 
   lockfile:
     runs-on: ubuntu-22.04
@@ -104,13 +107,13 @@ jobs:
           version: "nightly-60ec00296f00754bc21ed68fd05ab6b54b50e024"
       - name: Build tests
         run: |
-          cargo test --no-run --release --workspace \
+          cargo test --no-run --release \
           --all-features \
-          --all-targets \
+          --all-targets
       - name: Run tests
         timeout-minutes: 20
         run: |
-          cargo test --release --workspace \
+          cargo test --release \
           --all-features \
           --all-targets \
           -- --include-ignored
@@ -150,8 +153,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: run pedantic clippy on workspace crates
         run: |
-          cargo clippy --workspace \
-          --all-targets --all-features \
+          cargo clippy --all-targets --all-features \
           -- --warn clippy::pedantic --deny warnings
       - name: run pedantic clippy on tools/protobuf-compiler
         run: |
@@ -159,6 +161,40 @@ jobs:
           --all-targets --all-features \
           -- --warn clippy::pedantic --deny warnings
 
+  custom-lints:
+    runs-on: buildjet-8vcpu-ubuntu-2204
+    needs: run_checker
+    if: needs.run_checker.outputs.run_tests == 'true' && needs.run_checker.outputs.run_lint_rust == 'true'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@v1
+        with:
+          # This has to match `rust-toolchain` in the rust-toolchain file of the dylint lints
+          toolchain: nightly-2023-10-06
+          components: "clippy, llvm-tools-preview, rustc-dev"
+      - uses: Swatinem/rust-cache@v2.6.1
+        with:
+          cache-provider: "buildjet"
+      - name: install cargo-dylint and dylint-link
+        run: cargo install cargo-dylint@2.5.0 dylint-link@2.5.0 --locked
+      - uses: arduino/setup-protoc@v2
+        with:
+          version: "24.4"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: run clippy against custom lints
+        run: |
+          : # list all lint packages here to have clippy explicitly test them
+          cargo clippy --all-targets --all-features \
+          -p tracing_debug_field \
+          -- --warn clippy::pedantic --deny warnings
+      - name: run dylint clippy on workspace crates
+        env:
+          # set the dylint driver path to the target/ directory so that it's hopefully cached by rust-cache
+          DYLINT_DRIVER_PATH: ${{ github.workspace }}/target/dylint_drivers/
+          DYLINT_RUSTFLAGS: "-D warnings"
+        run: |
+          mkdir -p "$DYLINT_DRIVER_PATH"
+          cargo dylint --all --workspace
 
   test:
     if: ${{ always() && !cancelled() }}
