--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -48,11 +48,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: nightly-2023-08-18
+          toolchain: nightly-2023-10-06
           components: rustfmt
       - name: run rustfmt
         # note: for local development usually `cargo +nightly fmt` is sufficient;
-        # or `cargo +nightly-2023-08-18 fmt` for specifying the exactly release.
+        # or `cargo +nightly-2023-08-18 fmt` for specifying the exact release.
         run: cargo fmt --all -- --check
 
   toml:
