wip addressing comments

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -30,14 +30,14 @@ ASTRIA_CONDUCTOR_EXECUTION_COMMIT_LEVEL="SoftAndFirm"
 # 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
 ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657/websocket"
 
-# the sequencer block height that the rollup's first block was in
+# The sequencer block height that the rollup's first block was in
 ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
 
-# the data availability block height that the rollup's first block was in
-ASTRIA_CONDUCTOR_INITIAL_DA_BLOCK_HEIGHT=1
+# The Celestia block height that the rollup's first block was in
+ASTRIA_CONDUCTOR_INITIAL_CELESTIA_BLOCK_HEIGHT=1
 
-# The number of block on DA in which the first sequencer block for the rollup should be found
-ASTRIA_CONDUCTOR_DA_BLOCK_RANGE=100
+# The number of block on Celestia in which the first sequencer block for the rollup should be found
+ASTRIA_CONDUCTOR_CELESTIA_SEARCH_WINDOW=100
 
 # set to true to enable op-stack deposit derivations
 ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=false
