make celestia client a websocket client

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -8,7 +8,7 @@ ASTRIA_CONDUCTOR_CELESTIA_BEARER_TOKEN="<JWT Bearer token>"
 
 # Data Availability service url (Celestia node in this case)
 # This url is used to read astria blocks from the Data Availability layer
-ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="http://127.0.0.1:26659"
+ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="ws://127.0.0.1:26658"
 
 # The chain id of the chain that is being read from the astria-sequencer or the
 # Data Availability layer
