--- a/crates/astria-telemetry/Cargo.toml
+++ b/crates/astria-telemetry/Cargo.toml
@@ -7,6 +7,8 @@ rust-version = "1.70.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = { workspace = true, optional = true }
+
 tracing-subscriber = { version = "0.3.17", features = [
   "fmt",
   "env-filter",
@@ -15,3 +17,6 @@ tracing-subscriber = { version = "0.3.17", features = [
 
 [dev-dependencies]
 tracing = { workspace = true }
+
+[features]
+display = ["dep:base64"]
