feat(conductor, proto, core)!: add firm block sync
\#\# Sumaary

Allows conductor to sync using firm commitments
read from Celestia. Adds genesis info RPCs to the
execution API. Reworks and refactors syncing in
conductor to be part of normal execution.

\#\# Background

Soft-syncing (meaning bringing up a conductor's
associated rollup to the latest state using blocks
read from the Sequencer) was patched into
conductor as an after-thought. With the
requirement that a rollup also be synced using
firm blocks (read from Celestia) the design needed
to be refactored.

\#\# Changes

The main changes are:

- soft- and firm-syncing are reworked to not be
  separate processes but part of normal operation.
- the Sequencer/Celestia readers forward sequencer
  blocks to the executor in strictly sequential
  order starting from a given Sequencer height.
- the starting Sequencer height is obtained by
  calling the genesis info and commitment state
  RPCs on the Rollup.
- the genesis info RPC is added to the execution
  API.
- the executor now considers the spread between
  firm and soft commitments, ignoring soft blocks
  until firm blocks have caught (currently
  hard-coded to a difference of 16 heights).
- older soft-blocks are simply dropped.
- the Celestia Reader now considers a newly
  introduced concept of "celestia height variance"
  when looking for sequencer blocks: sequencer
  blocks at heights S and S+1 must be found within
  Celestia heights [C, C+V], where V is the
  variance and also obtained from the genesis info
  RPC.
- the commitment state is now broadcast from
  executor to the Sequencer/Celestia readers.
- Sequencer reader uses this information to not
  fetch/forward outdated blocks, but simply drops
  them.
- Celestia reader uses that information to advance
  its permitted Celestia heights (to be within the
  variance mentioned above).

Minor changes:

- rework instrumentation, events
- the executor, Sequencer reader, and Celestia
  reader now all have non-asy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,3 +93,8 @@ tracing = "0.1"
 tryhard = "0.5.1"
 which = "4.4.0"
 wiremock = "0.5"
+
+[workspace.dependencies.celestia-tendermint]
+package = "tendermint"
+git = "https://github.com/eigerco/celestia-tendermint-rs"
+rev = "bbe7de8"
