--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -42,7 +42,9 @@ merkle = { package = "astria-merkle", path = "../astria-merkle" }
 sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
   "websocket",
 ] }
-telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = ["display"] }
+telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
+  "display",
+] }
 
 [dev-dependencies]
 jsonrpsee = { workspace = true, features = ["server"] }
