--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -6,9 +6,16 @@ ASTRIA_CONDUCTOR_LOG="astria_conductor=info"
 # on the host running the celestia node.
 ASTRIA_CONDUCTOR_CELESTIA_BEARER_TOKEN="<JWT Bearer token>"
 
-# Data Availability service url (Celestia node in this case)
-# This url is used to read astria blocks from the Data Availability layer
-ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="ws://127.0.0.1:26658"
+# The URL of the celestia node used to subscribe to new headers and fetch
+# blocks from. Note that this string need not be a fully qualified URL and
+# can miss the scheme part. The scheme part, if present, will be replaced by
+# `ws:` or `http:` for websocket subscriptions and http GET requests,
+# respectively. The following are examples of accepted strings (26658 is
+# the default port of a celestia node to listen for RPCs).
+# - 127.0.0.1:26658
+# - ws://127.0.0.1:26658
+# - http://127.0.0.1:26658
+ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="127.0.0.1:26658"
 
 # The chain id of the chain that is being read from the astria-sequencer or the
 # Data Availability layer
