--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   build-and-push:
     runs-on: buildjet-8vcpu-ubuntu-2204
-    if: ${{ startsWith(github.ref, format('refs/tags/{0}-v', inputs.package-name)) || github.ref == 'refs/heads/main' || github.event_name == 'pull_request' }}
+    if: ${{ startsWith(github.ref, format('refs/tags/{0}-v', inputs.package-name)) || github.ref == 'refs/heads/release/sequencer-v0.8.x' || github.event_name == 'pull_request' }}
     steps:
       # Checking out the repo
       - uses: actions/checkout@v3
@@ -52,8 +52,8 @@ jobs:
             type=ref,event=pr
             type=match,pattern=([a-z-]+)-v(.*),group=2
             type=sha
-            # set latest tag for `main` branch
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            # set latest tag for `release/sequencer-v0.8.x` branch
+            type=raw,value=sequencer-v0.8.x,enable=${{ github.ref == format('refs/heads/{0}', 'release/sequencer-v0.8.x') }}
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
@@ -68,6 +68,6 @@ jobs:
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
-          cache-from: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:buildcache', inputs.package-name) }}
-          cache-to: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:buildcache', inputs.package-name) }},mode=max
+          cache-from: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:buildcache-v0.8.x', inputs.package-name) }}
+          cache-to: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:buildcache-v0.8.x', inputs.package-name) }},mode=max
         
