--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,12 +5,12 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "main"
+      - "release/sequencer-v0.8.x"
     tags:
-      - "**-v[0-9]+.[0-9]+.[0-9]+"
-      - "**-v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+"
-      - "**-v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+"
-      - "**-v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"
+      - "sequencer-v0.8.[0-9]+"
+      - "sequencer-v0.8.[0-9]+-alpha.[0-9]+"
+      - "sequencer-v0.8.[0-9]+-beta.[0-9]+"
+      - "sequencer-v0.8.[0-9]+-rc[0-9]+"
   # trigger on pull request updates when target is `main` branch
   pull_request:
     types:
@@ -19,29 +19,11 @@ on:
       - reopened
       - labeled
     branches:
-      - "main"
+      - "release/sequencer-v0.8.x"
 
 jobs:
   run_checker:
     uses: ./.github/workflows/reusable-run-checker.yml
-
-  composer:
-    needs: run_checker
-    if: needs.run_checker.outputs.run_docker == 'true'
-    uses: './.github/workflows/reusable-docker-build.yml'
-    with:
-      package-name: composer
-      target-binary: astria-composer
-    secrets: inherit
-
-  conductor:
-    needs: run_checker
-    if: needs.run_checker.outputs.run_docker == 'true'
-    uses: './.github/workflows/reusable-docker-build.yml'
-    with:
-      package-name: conductor
-      target-binary: astria-conductor
-    secrets: inherit
 
   sequencer:
     needs: run_checker
@@ -52,18 +34,9 @@ jobs:
       target-binary: astria-sequencer
     secrets: inherit
 
-  sequencer-relayer:
-    needs: run_checker
-    if: needs.run_checker.outputs.run_docker == 'true'
-    uses: './.github/workflows/reusable-docker-build.yml'
-    with:
-      package-name: sequencer-relayer
-      target-binary: astria-sequencer-relayer
-    secrets: inherit
-
   docker:
     if: ${{ always() && !cancelled() }}
-    needs: [composer, conductor, sequencer, sequencer-relayer]
+    needs: [sequencer]
     uses: ./.github/workflows/reusable-success.yml
     with:
       success: ${{ !contains(needs.*.result, 'failure') }}
