--- a/containerfiles/Cargo.toml
+++ b/containerfiles/Cargo.toml
@@ -37,7 +37,7 @@ hex = '0.4'
 hex-literal = '0.4.1'
 humantime = '2.1.0'
 hyper = '0.14'
-ibc-types = '0.10.0'
+ibc-types = '0.11.0'
 once_cell = '1.17.1'
 prost = '0.12'
 prost-types = '0.12'
@@ -67,15 +67,15 @@ version = '0.20'
 [workspace.dependencies.penumbra-ibc]
 default-features = false
 git = 'https://github.com/penumbra-zone/penumbra.git'
-tag = 'v0.64.1'
+rev = '1b1be7e1373401eaf30d63352ee680991cb42aea'
 
 [workspace.dependencies.penumbra-proto]
 git = 'https://github.com/penumbra-zone/penumbra.git'
-tag = 'v0.64.1'
+rev = '1b1be7e1373401eaf30d63352ee680991cb42aea'
 
 [workspace.dependencies.penumbra-tower-trace]
 git = 'https://github.com/penumbra-zone/penumbra.git'
-tag = 'v0.64.1'
+rev = '1b1be7e1373401eaf30d63352ee680991cb42aea'
 
 [workspace.dependencies.reqwest]
 default-features = false
