Adds prometheus metrics exporter across all services

--- a/crates/astria-composer/local.env.example
+++ b/crates/astria-composer/local.env.example
@@ -25,3 +25,9 @@ ASTRIA_COMPOSER_MAX_SUBMIT_INTERVAL_MS=2000
 # set below the sequencer's max block size to allow space for encoding, signature, public
 # key and nonce bytes
 ASTRIA_COMPOSER_MAX_BYTES_PER_BUNDLE=200000
+
+# Set to true to enable prometheus metrics.
+ASTRIA_COMPOSER_METRICS_ENABLED=false
+
+# The address at which the prometheus HTTP listener will bind if enabled.
+ASTRIA_COMPOSER_PROMETHEUS_HTTP_LISTENER_ADDR="127.0.0.1:9000"
