--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ once_cell = "1.17.1"
 sha2 = "0.10"
 serde = "1"
 serde_json = "1"
+metrics = "0.19.0"
 # bump to a release after https://github.com/penumbra-zone/penumbra/pull/3598 is included
 penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "1b1be7e1373401eaf30d63352ee680991cb42aea", default-features = false }
 penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "1b1be7e1373401eaf30d63352ee680991cb42aea" }
