--- a/crates/astria-celestia-client/Cargo.toml
+++ b/crates/astria-celestia-client/Cargo.toml
@@ -11,6 +11,7 @@ async-trait = { workspace = true }
 base64 = { workspace = true }
 base64-serde = { workspace = true }
 hex = { workspace = true }
+metrics = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
