--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.3.1"
 edition = "2021"
 rust-version = "1.70.0"
 
+[[bin]]
+name = "astria-composer"
+test = false
+bench = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
