--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.11.1"
 edition = "2021"
 rust-version = "1.73"
 
+[[bin]]
+name = "astria-conductor"
+test = false
+bench = false
+
 [dependencies]
 async-trait = "0.1.73"
 
