silly github won't allow reusable locals not in workflows directory and MUST be flat structure

--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -30,6 +30,6 @@ jobs:
   admin:
     if: ${{ always() && !cancelled() }}
     needs: [pr_title]
-    uses: ./.github/reusable/success.yml
+    uses: ./.github/workflows/reusable-success.yml
     with:
       success: ${{ !contains(needs.*.result, 'failure') }}
