--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@1.73.0
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
-          bin: astria-${{ github.event.inputs.package-name }}
+          bin: astria-${{ inputs.package-name }}
           dry-run: ${{ !startsWith(github.ref, format('refs/tags/{0}-v', inputs.package-name)) }}
           # (optional) Target triple, default is host triple.
           target: ${{ matrix.target }}
